# Tauri-NextJS-Template

./: .gitignore  eslint.config.mjs  next.config.ts  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
