[package]
name = "tauritemplate"
version = "0.1.0"
description = "A template for making NextJS tauri apps"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "tauritemplate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

